--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 djangoProyect/djangoProyect/__pycache__/
 djangoProyect/movies/migrations/
 djangoProyect/movies/__pycache__/
+django01/django01/bin/
+django01/django01/lib/
+django01/django01/lib64
